# g-ink-studio-co-writer-

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  RAILWAY.md  README.md  RUN.md  Story_Forge_Docs.md  docker-compose.prod.yml  docker-compose.yml  railway.json  railway.worker.json  run.sh  story_forge.jsx
apps/api/: .dockerignore  .env.example  .env.production.example  entrypoint.sh  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py  deps.py  errors.py  idempotency.py  middleware.py  plans.py  prompt_safety.py  ratelimit.py  security.py  ssrf.py
apps/api/app/db/: models.py  publishing_models.py  publishing_schemas.py  schemas.py  session.py
apps/api/app/routers/: export_pub.py  inbox.py  publishing.py  reader.py  social.py
apps/api/app/services/: auth_service.py  billing_service.py  context_builder.py  embedding_service.py  entitlement_service.py  export_service.py  flow_service.py  graph_service.py  identity_questions.py  identity_service.py  llm_service.py  narrative_service.py  notification_service.py  observer_service.py  publishing_export_service.py  publishing_service.py  rag_service.py  reader_service.py  redemption_service.py  site_config_service.py  social_service.py  storage_service.py  story_check_service.py  version_service.py  (+1 more)
apps/api/migrations/: env.py
apps/api/tests/: conftest.py  test_audit_fixes.py  test_audit_fixes_p2.py  test_billing_webhook_e2e.py  test_concurrency.py  test_covers_notifications.py  test_deferred_features.py  test_email_normalization.py  test_llm_routing.py  test_migration_drift.py  test_polar_webhook.py  test_redemption_codes.py  test_smoke.py  test_subscriptions.py  test_voice_studio.py
(+151 files in other folders)
